<?xml version="1.0"?>
<package format="2">
  <name>projector_bot</name>
  <version>0.0.0</version>
  <description>The projector_bot package </description>

  <maintainer email="laurenz@acrai.de">Laurenz Altenmueller</maintainer>
  <maintainer email="engelhard@magazino.eu">Nikolas Engelhard</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
<!--  <depend>eigen_conversions</depend>-->
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>



